# areaGraph

./: .gitignore  CMakeLists.txt  README.md
dataset/: data_setting  data_setting~  data_set~
include/: AreaGenerate.h  Denoise.h  RoomDect.h  TopoGeometry.h  TopoGraph.h  VoriConfig.h  VoriGraph.h  passageSearch.h  roomGraph.h
include/cgal/: AlphaShape.h  AlphaShapeRemoval.h  CgalVoronoi.h
include/qt/: QImageVoronoi.h
src/: AreaGenerate.cpp  Denoise.cpp  RoomDect.cpp  TopoGraph.cpp  VoriConfig.cpp  VoriGraph.cpp  passageSearch.cpp  roomGraph.cpp
src/cgal/: AlphaShape.cpp  AlphaShapeRemoval.cpp  CgalVoronoi.cpp
src/qt/: QImageVoronoi.cpp
test/: example.cpp
